--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -2,9 +2,11 @@ html {
   font-size: 62.5%
 }
 body {
+  color:$dark-gray;
   font-family:  Helvetica, Arial, sans-serif;
   font-size: $m-size;
-  background: #333745;
+  background: #696969;
+  line-height: 1.6;
 }
 
 button{
