--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -5,6 +5,8 @@ $blue: #3c4251;
 $light-blue:#464b5e;
 $off-white:#a5afd7;
 $purple: #8357c5;
+$dark-gray:#333;
+$sky-blue:#add8e6;
 
 //size
 $s-size:1.2rem;
@@ -12,3 +14,4 @@ $m-size:1.6rem;
 $l-size:3.2rem;
 $xl-size:4.8rem;
 $desktop-breakpoint: 45rem;
+$font-size-large:1.8rem;
