--- a/src/styles/component/_box-layout.scss
+++ b/src/styles/component/_box-layout.scss
@@ -2,5 +2,21 @@
   background: url('/images/bg.jpg');
   background-size: cover;
   height: 100vh;
-  width: 100vw
+  width: 100vw;
+  display:flex;
+  align-items: center;
+  justify-content: center
+}
+
+.box-layout__box{
+  background: fade-out(white, .15);
+  border-radius: 3px;
+  padding: $l-size $m-size;
+  text-align: center;
+  width: 25rem
+  
+}
+.box-layout__title{
+  margin: 0 0 $m-size 0;
+  line-height: 1; //space above and below the line
 }
