--- a/src/styles/component/_button.scss
+++ b/src/styles/component/_button.scss
@@ -1,38 +1,11 @@
-.big-button{
-  background: $purple;
-  border: none;
-  border-bottom: .6rem solid darken($purple, 10%);
-  color: white;
-  font-weight: bold;
-  font-size: $l-size;
-  margin-bottom: $m-size;
-  padding: 2.4rem;
-  width: 100%;
-
-}
-
-.big-button:disabled{
-  opacity: 0.5;
-}
-
-.button{
-  background: $purple;
+.button-sytle{
+  background-color:$sky-blue;
+  width: 50%;
+  display: inline-block;
+  padding:$s-size;
+  border-color: $sky-blue;
+  color: $dark-gray;
   border:none;
-  border-bottom: .3rem solid darken($purple, 10%);
-  color: white;
-  font-weight: 500;
-  padding: $s-size;
-}
-
-.button--link{
-  background: none;
-  border:none;
-  color: $off-white;
-  padding: 0;
-}
-
-@media(min-width:$desktop-breakpoint){
-  .big-button{
-    margin-bottom: $xl-size
-  }
+  font-size: $font-size-large;
+  font-weight: 300
 }
