--- a/src/styles/component/_header.scss
+++ b/src/styles/component/_header.scss
@@ -1,24 +1,22 @@
 .header{
-  background: $off-black;
-  margin-bottom: $m-size;
-  padding: $m-size 0;
-  color: white;
+  background-color: #696969;
 }
-//BEM block (bulding block) element(elements inside the block) modifier
-.header__title{
-  font-size:$l-size;
-  margin:0;
-}
-
-.header__subtitle{
-  color: $off-white;
-  font-size: $m-size;
-  font-weight:500;
-  margin: 0;
-}
-
-@media(min-width:$desktop-breakpoint){
-  .header{
-    margin-bottom: $xl-size
+.header_content{
+  align-items:center;
+  display: flex;
+  justify-content: space-between;
+  padding: $s-size 0;
+  button{
+    background: none;
+    border: none;
+    color: white
   }
+}
+.header_title{
+  color:white;
+  text-decoration: none;
+  h1{
+    margin: 0;
+  }
+
 }
