add styling for add expense page

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -5,7 +5,7 @@ body {
   color:$dark-gray;
   font-family:  Helvetica, Arial, sans-serif;
   font-size: $m-size;
-  background: #696969;
+  background: white;
   line-height: 1.6;
 }
 
