--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,3 +12,5 @@
 @import './component/header';
 @import './component/content-container.scss';
 @import './component/page-header';
+@import './component/input-group';
+@import './component/input';
