styling expense dashboard page (no expense table and expense table)

--- a/src/styles/component/_button.scss
+++ b/src/styles/component/_button.scss
@@ -4,7 +4,7 @@
   display: inline-block;
   padding:$s-size;
   border-color: $sky-blue;
-  color: $dark-gray;
+  color: $dark-grey;
   border:none;
   font-size: $font-size-large;
   font-weight: 300
