--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,3 +14,5 @@
 @import './component/page-header';
 @import './component/input-group';
 @import './component/input';
+@import './component/visibility';
+@import './component/list';
