--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -2,7 +2,7 @@ html {
   font-size: 62.5%
 }
 body {
-  color:$dark-gray;
+  color:$dark-grey;
   font-family:  Helvetica, Arial, sans-serif;
   font-size: $m-size;
   background: white;
