--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -3,11 +3,13 @@ $off-black: #20222b;
 $dark-blue: #333745;
 $blue: #3c4251;
 $light-blue:#464b5e;
-$off-white:#a5afd7;
+// $off-white:#a5afd7;
 $purple: #8357c5;
-$dark-gray:#333;
+$dark-grey:#333;
 $sky-blue:#add8e6;
 $light-red: #ffcccb;
+$off-white:#f7f7ff;
+$grey: #666;
 
 //size
 $s-size:1.2rem;
@@ -16,3 +18,4 @@ $l-size:3.2rem;
 $xl-size:4.8rem;
 $desktop-breakpoint: 45rem;
 $font-size-large:1.8rem;
+$font-size-small:1.4rem
