change rem to px and add viewport and width=device-width (conent attribute in header)

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -12,10 +12,10 @@ $off-white:#f7f7ff;
 $grey: #666;
 
 //size
-$s-size:1.2rem;
-$m-size:1.6rem;
-$l-size:3.2rem;
-$xl-size:4.8rem;
-$desktop-breakpoint: 45rem;
-$font-size-large:1.8rem;
-$font-size-small:1.4rem
+$s-size:10px;
+$m-size:22px;
+$l-size:47px;
+$xl-size:52px;
+$desktop-breakpoint: 900px;
+$font-size-large:15px;
+$font-size-small:14px;
