--- a/src/styles/component/_box-layout.scss
+++ b/src/styles/component/_box-layout.scss
@@ -13,7 +13,7 @@
   border-radius: 3px;
   padding: $l-size $m-size;
   text-align: center;
-  width: 25rem
+  width: 400px
   
 }
 .box-layout__title{
