--- a/src/styles/component/_button.scss
+++ b/src/styles/component/_button.scss
@@ -1,6 +1,6 @@
 .button-sytle{
   background-color:$sky-blue;
-  width: 50%;
+  width: 100px;
   display: inline-block;
   padding:$s-size;
   border-color: $sky-blue;
