--- a/src/styles/component/_page-header.scss
+++ b/src/styles/component/_page-header.scss
@@ -3,12 +3,12 @@
   margin-bottom: $l-size;
   padding: $l-size 0;
   button{
-    width: 20%
+    width: 100px
   }
 }
 
 .page-header__title{
-  font-weight: 300;
+  font-weight: 100;
   margin: 0;
   span{
     font-weight: bold;
