--- a/src/styles/component/_visibility.scss
+++ b/src/styles/component/_visibility.scss
@@ -5,7 +5,7 @@
 }
 
 .show-for-desktop{
-  @media(max-width: $desktop-breakpoint - 0.01rem){
+  @media(max-width: $desktop-breakpoint - 0.01px){
     display: none;
   }
 }
