add polyfill to webpack and fix margin issue in edit expense page

--- a/src/styles/component/_content-container.scss
+++ b/src/styles/component/_content-container.scss
@@ -3,3 +3,9 @@
   padding:0 $m-size;
   max-width: 80rem;
 }
+.edit-form-container{
+  @media (min-width: $desktop-breakpoint){
+  margin-bottom: 2%;
+  }
+
+}
