add material ui and change table using material ui components

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -15,3 +15,12 @@ button{
 button:disabled{
   cursor: default;
 }
+.bottom_margin{
+  margin-bottom: 2%;
+}
+
+tbody tr {
+  &:hover{
+    background: $off-white;
+  }
+}
