--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -10,6 +10,8 @@ $sky-blue:#add8e6;
 $light-red: #ffcccb;
 $off-white:#f7f7ff;
 $grey: #666;
+$purple-blue: #3F51B5;
+$light-yellow: #FFFACD;
 
 //size
 $s-size:10px;
