--- a/src/styles/component/_page-header.scss
+++ b/src/styles/component/_page-header.scss
@@ -3,6 +3,11 @@
   margin-bottom: $l-size;
   padding: $l-size 0;
 }
+.page-header-dashboard{
+  background-color: $off-white;
+  margin-bottom: $s-size;
+  padding: $l-size 0;
+}
 
 .page-header__title{
   font-weight: 100;
