--- a/src/styles/component/_input-group.scss
+++ b/src/styles/component/_input-group.scss
@@ -14,6 +14,13 @@
     margin: 0 2% 0 0; // remove top bottom and left margins (clockwise - top right bottom left)
   } 
 }
+.input-group__date{
+  margin-top: 3rem;
+  margin-bottom: $s-size;
+  @media (min-width: $desktop-breakpoint){
+    margin: 2.5rem 2% 0 0; // remove top bottom and left margins (clockwise - top right bottom left)
+  } 
+}
 
 .input-group__itemLong{
   @extend .input-group__item ;
