--- a/src/styles/component/_box-layout.scss
+++ b/src/styles/component/_box-layout.scss
@@ -1,5 +1,5 @@
 .box-layout{
-  background: url('/images/bg.jpg');
+  background-color: "#696969";
   background-size: cover;
   height: 100vh;
   width: 100vw;
